# raspi4b-hid

./: Linux_USB_HID_gadget_driver.md  README.md  create_keyboard.sh  server.py  test_keyboard_alphabet.py  test_keyboard_number.py  test_keyboard_string.py
app/: Cargo.toml
app/defs/: Cargo.toml
app/defs/src/: lib.rs
app/raspi_service/: Cargo.toml
app/raspi_service/src/: main.rs
app/win_app/: Cargo.toml
app/win_app/src/: main.rs
client/: Cargo.toml
client/src/: main.rs
