[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
# tokio = {version="1.41.1",features=["net","io-util","macros","rt","rt-multi-thread","sync"]}
# winit = "0.30.5"
log = "0.4"
env_logger = "0.11.5"
global-hotkey = "0.6.3"
anyhow = "1.0"
winapi = "0.3.9"
serialport = "4.6.1"
serde = "1.0"
bincode = "1.3.3"