[package]
name = "defs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
anyhow ={ workspace = true }
serialport ={ workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
global-hotkey = "0.6.3"