[package]
name = "raspi_service"
version =  { workspace = true}
edition =  { workspace = true}

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
anyhow ={ workspace = true }
serialport ={ workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
defs = {path = "../defs"}
once_cell = "1.20.2"
rppal = "0.20.0"