[package]
name = "win_app"
version = { workspace = true}
edition = { workspace = true}

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
anyhow ={ workspace = true }
serialport ={ workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
global-hotkey = "0.6.3"
winapi = "0.3.9"
defs = {path = "../defs"}
